--- a/exhibitions/wanawari.html
+++ b/exhibitions/wanawari.html
@@ -135,7 +135,7 @@
             <section class="child-images">
 
                 <img src="../exhibition/wa na wari - wa na wari art space seatle,usa/271859102_10224980653095621_3753920555993396334_n.jpg"
-                    alt="">
+                    alt="wanawari exhibition photo">
             </section>
 
         </div>
