--- a/projects/howtophotographylagos.html
+++ b/projects/howtophotographylagos.html
@@ -13,7 +13,7 @@
 
     <meta name="robots" content="index, follow">
     <meta name="description"
-        content="neec nonso is a nigerian visual artist. he captures everyday lifein communities across nigeria. he works predominantly with photography and aims to inspire conversations">
+        content="neec nonso is a nigerian visual artist. he captures everyday lifein communities across nigeria. he works predominantly with photography">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -124,7 +124,8 @@
 
             <h1 class="project-items-words-title">how to photograph lagos.</h1>
 
-            <p class="project-items-words-paragraph"> lagos is a city where slow and steady wins the race... philosophy is not
+            <p class="project-items-words-paragraph"> lagos is a city where slow and steady wins the race... philosophy
+                is not
                 tolerated. it’s a city where
                 calmness is
                 misinterpreted as sluggishness and weakness. but you cannot blame the people, because in a city (whose
@@ -206,7 +207,7 @@
                     <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
                 </button>
 
-               
+
 
             </div>
 
@@ -217,7 +218,7 @@
                 <button class="carousel-indicator"></button>
                 <button class="carousel-indicator"></button>
                 <button class="carousel-indicator"></button>
-            
+
             </div>
 
         </div>
