--- a/projects/theboysfraternity.html
+++ b/projects/theboysfraternity.html
@@ -121,7 +121,7 @@
             <div class="carousel potrait">
 
                 <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="../images/arrow-back-circle.svg" alt="">
+                    <img src="../images/arrow-back-circle.svg" alt="arrow back button">
                 </button>
 
                 <div class="carousel-track-container">
@@ -165,7 +165,7 @@
                 </div>
 
                 <button class="carousel-button carousel--button-right">
-                    <img src="../images/arrow-forward-circle.svg" alt="">
+                    <img src="../images/arrow-forward-circle.svg" alt="arrow forward button">
                 </button>
 
             </div>
@@ -229,16 +229,16 @@
 
         <div class="project-items-words-mobile">
 
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/1.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/2.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/3.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/4.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/5.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/6.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/7.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/8.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/9.webp" alt="">
-            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/10.webp" alt="">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/1.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/2.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/3.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/4.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/5.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/6.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/7.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/8.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/9.webp" alt="the boys fraternity photos">
+            <img class="carousel-image mobile" src="../images/the boys fraternity/Mobile/10.webp" alt="the boys fraternity photos">
 
         </div>
 
