--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -167,7 +167,7 @@
             <div class="carousel">
 
                 <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="../images/arrow-back-circle.svg" alt="">
+                    <img src="../images/arrow-back-circle.svg" alt="arrow back button">
                 </button>
 
                 <div class="carousel-track-container">
@@ -198,7 +198,7 @@
                 </div>
 
                 <button class="carousel-button carousel--button-right">
-                    <img src="../images/arrow-forward-circle.svg" alt="">
+                    <img src="../images/arrow-forward-circle.svg" alt="arrow forward button">
                 </button>
 
                
@@ -218,12 +218,12 @@
 
         <div class="project-items-words-mobile">
 
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/1.webp" alt="">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/2.webp" alt="">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/3.webp" alt="">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/4.webp" alt="">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/5.webp" alt="">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/6.webp" alt="">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/1.webp" alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/2.webp" alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/3.webp" alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/4.webp" alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/5.webp" alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/6.webp" alt="what was dead was never dead images">
 
         </div>
 
