--- a/augmented-reality.html
+++ b/augmented-reality.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist. he was born in aguleri, ">
+    <meta name="description" content="neec creates inspirational images that provoke the imagination and touch the heart through the chosen medium of photography. ">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
