--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
         <div class="contact-container">
 
             <div class="contact-image-container">
-                <img class="contact-image" src="images/contact-photo.webp" alt="">
+                <img class="contact-image" src="images/contact-photo.webp" alt="contact photo">
             </div>
 
             <div class="contact-words-container">
@@ -213,6 +213,7 @@
             duration: 1,
             ease: "power1.inOut"
         });
+
         //   gsap.from(".contact-image", {
         //       scrollTrigger: {
         //           trigger: ".contact-container",
@@ -239,10 +240,12 @@
         });
         tl.from(".contact-image-container", { x: -200, opacity: 0, duration: 1.5 })
         tl.from(".contact-main", { x: 200, opacity: 0, duration: 1.5 })
+          .from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
+            .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
 
         tl.from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-       //     .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
+  
 
     </script>
 
