--- a/exhibitions/afrofutures.html
+++ b/exhibitions/afrofutures.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist. he was born in aguleri, anambra state.">
+    <meta name="description" content="Nigerian visual artist born in 1990 in aguleri, south south nigeria works predominantly with photography reflects everyday life experiences and nuances of communities">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -132,18 +132,26 @@
 
         <section class="child-images">
 
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/2.webp" alt="afrofutures">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/3.webp" alt="afrofutures">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/4.webp" alt="afrofutures">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/5.webp" alt="afrofutures">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/6.webp" alt="afrofutures">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/7.webp" alt="afrofutures">
-          
+            <img class="child-images-photos"
+                src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/2.webp" alt="afrofutures">
+            <img class="child-images-photos"
+                src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/3.webp" alt="afrofutures">
+            <img class="child-images-photos"
+                src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/4.webp" alt="afrofutures">
+            <img class="child-images-photos"
+                src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/5.webp" alt="afrofutures">
+            <img class="child-images-photos"
+                src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/6.webp" alt="afrofutures">
+            <img class="child-images-photos"
+                src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/7.webp" alt="afrofutures">
+            <img class="child-images-photos"
+                src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/8.webp" alt="afrofutures">
+
         </section>
 
 
         <section class="afrofuture-last-image">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/8.webp" alt="afrofutures">
+
         </section>
 
     </div>
