--- a/exhibitions/yanga.html
+++ b/exhibitions/yanga.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist. he was born in aguleri, anambra state.">
+    <meta name="description" content="Nigeria-based visual artist  neec nonso  uses photography to create emotionally resonant images that act as snapshots of daily life.">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
