--- a/exhibitions/no-victor-no-vanquished:theworldatthecrossroads.html
+++ b/exhibitions/no-victor-no-vanquished:theworldatthecrossroads.html
@@ -48,7 +48,7 @@
     <!-- Back to top button -->
     <button onclick="topFunction()" id="myBtn" title="Back to Top">Top</button>
 
-    <!--- Start of Navbar -->
+    <!--- Start of Naobar -->
 
     <div>
 
@@ -68,7 +68,7 @@
                     <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='../video'>video </a>
+                    <a href='../augmented-reality'> augmented-reality </a>
                 </li>
                 <li class='list-item'>
                     <a href='../exhibition'>exhibitions </a>
@@ -128,15 +128,18 @@
             <p class="exhibition-venue">iwaya community art biennale,</p>
             <p class="exhibition-location">lagos,nigeria</p>
         </section>
+
         <section>
             <img class="slider-image" name="slide" />
         </section>
 
 
-        <section class="child-images">
-            <img src="../exhibition/no victor/3.webp" alt="no-victor-no-vanquished">
-            <img src="../exhibition/no victor/4.webp" alt="no-victor-no-vanquished">
-            <img src="../exhibition/no victor/5.webp" alt="no-victor-no-vanquished">
+        <section class="no-victor-no-vanquished-images">
+
+            <img class="no-victor-no-vanquished" src="../exhibition/no victor/3.webp" alt="no-victor-no-vanquished">
+            <img class="no-victor-no-vanquished" src="../exhibition/no victor/4.webp" alt="no-victor-no-vanquished">
+            <img class="no-victor-no-vanquished" src="../exhibition/no victor/5.webp" alt="no-victor-no-vanquished">
+
         </section>
 
     </div>
