--- a/exhibitions/yanga.html
+++ b/exhibitions/yanga.html
@@ -126,12 +126,12 @@
         </section>
 
         <section class="child-images">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/4.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/5.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/6.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/7.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/8.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/9.webp" alt="">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/4.webp" alt="yanga exhibition images">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/5.webp" alt="yanga exhibition images">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/6.webp" alt="yanga exhibition images">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/7.webp" alt="yanga exhibition images">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/8.webp" alt="yanga exhibition images">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/9.webp" alt="yanga exhibition images">
         </section>
 
         <section class="potrait-images-exhibition">
