--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -11,7 +11,7 @@
 
     <meta name="robots" content="index, follow">
     <meta name="description"
-        content="Neece Nonso is a Nigerian visual artist being described as a conceptual, documentary and street photographer. He uses photography to create a dialogue from both formal and social contexts.">
+        content="Neece Nonso is a Nigerian visual artist being described as a conceptual, documentary and street photographer. He uses photography to create a dialogues">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -218,7 +218,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
-    <script src="../projects.js" async defer></script>
+    
     <script src="../scripts/projects.js" async defer></script>
 </body>
 
