--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -35,10 +35,10 @@
     <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
     <meta name="twitter:image" content="../images/ogimage.png" />
 
-    <!-- Style Links 
-    
-        <link rel="stylesheet" href="minify.css"> 
-    -->
+    <!-- Style Links     -->
+
+    <!--      <link rel="stylesheet" href="minify.css"> -->
+
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mobile.css">
 </head>
@@ -201,7 +201,7 @@
                     <img src="../images/arrow-forward-circle.svg" alt="arrow forward button">
                 </button>
 
-               
+
 
             </div>
 
@@ -218,12 +218,18 @@
 
         <div class="project-items-words-mobile">
 
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/1.webp" alt="what was dead was never dead images">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/2.webp" alt="what was dead was never dead images">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/3.webp" alt="what was dead was never dead images">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/4.webp" alt="what was dead was never dead images">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/5.webp" alt="what was dead was never dead images">
-            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/6.webp" alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/1.webp"
+                alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/2.webp"
+                alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/3.webp"
+                alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/4.webp"
+                alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/5.webp"
+                alt="what was dead was never dead images">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/6.webp"
+                alt="what was dead was never dead images">
 
         </div>
 
@@ -254,7 +260,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
 
-    <script src="../projects.js" async defer></script>
+
     <script src="../scripts/projects.js" async defer></script>
 </body>
 
