--- a/exhibitions/afrofutures.html
+++ b/exhibitions/afrofutures.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Nigerian visual artist born in 1990 in aguleri, south south nigeria works predominantly with photography reflects everyday life experiences and nuances of communities">
+    <meta name="description" content="Nigerian visual artist born in 1990 in aguleri, south south nigeria works predominantly with photography reflects everyday life experiences">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
