--- a/projects/waitingforchineke.html
+++ b/projects/waitingforchineke.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Neece Nonso is a self taught visual artist. His works capture everyday life and its nuances in communities across Nigeria. His artwork takes form in photographs as he uses photography to create a dialogue from both formal and social contexts.">
+    <meta name="description" content="Neece Nonso is a self taught visual artist. His works capture everyday life and its nuances in communities across Nigeria.">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
