fixed-seo-errors

--- a/exhibitions/relebootcampexhibition.html
+++ b/exhibitions/relebootcampexhibition.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist. he was born in aguleri, anambra state.">
+    <meta name="description" content="neec nonso is a nigerian visual artist who uses photography to create an aesthetic that explores the social structures of everyday life in communities across nigeria">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -20,8 +20,8 @@
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
-    <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:description" content="neec nonso is a nigerian visual artist who uses photography to create an aesthetic that explores the social structures of everyday life in communities across nigeria.">
+    <meta property="og:url" content="https://www.neecnonso.com/exhibitions/relebootcampexhibition.html" />
     <meta property="og:image" content="../images/ogimage.png" />
 
 
