--- a/projects/toiletintoiletout.html
+++ b/projects/toiletintoiletout.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="description" content="neec nonso is a young nigerian photographer whose work documents social issues in the country. He was self-taught and loved to capture everyday life scenes through his photographs.">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -21,8 +21,8 @@
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
-    <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:description" content="neec nonso is a young nigerian photographer whose work documents social issues in the country. He was self-taught and loved to capture everyday life scenes through his photographs">
+    <meta property="og:url" content="https://www.neecnonso.com/projects/toiletintoiletout" />
     <meta property="og:image" content="../images/ogimage.png" />
 
 
