--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="description" content="neec nonso is a self-taught visual artist. He works predominantly with photography. Nonso's photos show life and ordinary people as they are.">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -22,8 +22,8 @@
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
-    <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:description" content="neec nonso is a self-taught visual artist. He works predominantly with photography. Nonso's photos show life and ordinary people as they are.">
+    <meta property="og:url" content="https://www.neecnonso.com/projects/whatwasdeadwasneverdead" />
     <meta property="og:image" content="../images/ogimage.png" />
 
 
