--- a/augmented-reality.html
+++ b/augmented-reality.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:url" content="https://www.neecnonso.com/augmented-reality" />
     <meta property="og:image" content="images/ogimage.png" />
 
 
