--- a/exhibitions/yanga.html
+++ b/exhibitions/yanga.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:url" content="https://www.neecnonso.com/exhibitions/yanga" />
     <meta property="og:image" content="../images/ogimage.png" />
 
 
@@ -135,9 +135,9 @@
         </section>
 
         <section class="potrait-images-exhibition">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/11.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/12.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/13.webp" alt="">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/11.webp" alt="yanga exhibition images">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/12.webp" alt="yanga exhibition images">
+            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/13.webp" alt="yanga exhibition images">
 
 
         </section>
