--- a/projects/waitingforchineke.html
+++ b/projects/waitingforchineke.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:url" content="https://www.neecnonso.com/projects/waitingforchineke" />
     <meta property="og:image" content="../images/ogimage.png" />
 
 
