--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
         function randombg() {
             var random = Math.floor(Math.random() * 15) + 0;
             var backgroundImages = [
-                "url('./assets/homepage/1.jpg')",
-                "url('./assets/homepage/2.jpg')",
-                "url('./assets/homepage/3.jpg')",
-                "url('./assets/homepage/4.jpg')",
-                "url('./assets/homepage/5.jpg')",
-                "url('./assets/homepage/6.jpg')",
-                "url('./assets/homepage/7.jpg')",
-                "url('./assets/homepage/8.jpg')",
-                "url('./assets/homepage/9.jpg')",
-                "url('./assets/homepage/10.jpg')",
-                "url('./assets/homepage/11.jpg')",
-                "url('./assets/homepage/12.jpg')",
-                "url('./assets/homepage/13.jpg')",
-                "url('./assets/homepage/14.jpg')",
-                "url('./assets/homepage/15.jpg')",
+                "url('./assets/homepage/1.webp')",
+                "url('./assets/homepage/2.webp')",
+                "url('./assets/homepage/3.webp')",
+                "url('./assets/homepage/4.webp')",
+                "url('./assets/homepage/5.webp')",
+                "url('./assets/homepage/6.webp')",
+                "url('./assets/homepage/7.webp')",
+                "url('./assets/homepage/8.webp')",
+                "url('./assets/homepage/9.webp')",
+                "url('./assets/homepage/10.webp')",
+                "url('./assets/homepage/11.webp')",
+                "url('./assets/homepage/12.webp')",
+                "url('./assets/homepage/13.webp')",
+                "url('./assets/homepage/14.webp')",
+                "url('./assets/homepage/15.webp')",
             ];
             document.getElementById("random").style.backgroundImage = backgroundImages[random];
         }
