--- a/alternate.html
+++ b/alternate.html
@@ -68,7 +68,7 @@
 
         <nav class='navbar'>
             <a class="logo-link" href='/'>
-                <img src="images/neec nonso logo.png" class='logo-image' alt='logo' />
+                <img src="./assets/icons/neec-nonso-logo.png" class='logo-image' alt='logo' />
             </a>
 
             <ul class='nav-list'>
