--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
 
         <nav class='navbar'>
             <a class="logo-link" href='/'>
-                <img src="images/neec nonso logo.png" class='logo-image' alt='logo' />
+                <img src="./assets/icons/neec-nonso-logo.png" class='logo-image' alt='logo' />
             </a>
 
             <ul class='nav-list'>
@@ -131,7 +131,8 @@
 
             <div class="card">
                 <a href="./projects/theboysfraternity">
-                    <img class="card-image" src="images/homepage 350px.webp" alt="projects-image">
+                    <img class="card-image" src="./assets/projects/the boys fraternity/Mobile/project.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theboysfraternity">
                     <p class="project-title">the boys fraternity.</p>
@@ -140,7 +141,8 @@
 
             <div class="card">
                 <a href="./projects/thelastburial">
-                    <img class="card-image" src="images/the last burial/Mobile/1.webp" alt="projects-image">
+                    <img class="card-image" src="./assets/projects/the last burial/Mobile/1.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/thelastburial">
                     <p class="project-title">the last burial.</p>
@@ -149,7 +151,8 @@
 
             <div class="card">
                 <a href="./projects/whatwasdeadwasneverdead">
-                    <img class="card-image" src="images/what was dead was never dead/Mobile/1.webp"
+                    <img class="card-image"
+                        src="./assets/projects/what was dead was never dead/Mobile/1.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/whatwasdeadwasneverdead">
@@ -159,7 +162,7 @@
 
             <div class="card">
                 <a href="./projects/christmasandclothes">
-                    <img class="card-image" src="images/christmas and clothes/Mobile/1.webp" alt="projects-image">
+                    <img class="card-image" src="../assets/projects/christmas-and-clothes/1.webp" alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/christmasandclothes">
                     <p class="project-title">christmas and clothes.</p>
@@ -168,7 +171,8 @@
 
             <div class="card">
                 <a href="./projects/howtophotographylagos">
-                    <img class="card-image" src="images/howtophotographylagos/350px Mobile/neec.nonso - 4.webp"
+                    <img class="card-image"
+                        src="./assets/projects/howtophotographylagos/350px Mobile/neec.nonso - 4.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/howtophotographylagos">
@@ -178,7 +182,8 @@
 
             <div class="card">
                 <a href="./projects/howtophotographylagostwo">
-                    <img class="card-image" src="images/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
+                    <img class="card-image"
+                        src="../assets/projects/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/howtophotographylagostwo">
@@ -186,61 +191,49 @@
                 </a>
             </div>
 
-            <div class="card bottom">
+            <div class="card">
                 <a href="./projects/theanotherbeginning">
-                    <img class="card-image" src="images/the another beginning/350px Jpeg/1.webp" alt="projects-image">
+                    <img class="card-image"
+                        src="./assets/projects/the another beginning/350px Jpeg/1.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theanotherbeginning">
                     <p class="project-title">the another beginning.</p>
                 </a>
             </div>
 
-            <div class="card bottom">
+            <div class="card">
                 <a href="./projects/toiletintoiletout">
-                    <img class="card-image" src="images/toilet in, toilet out/Mobile/2.webp" alt="projects-image">
+                    <img class="card-image"
+                        src="./assets/projects/toilet in, toilet out/Mobile/2.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/toiletintoiletout">
                     <p class="project-title">toilet in, toilet out.</p>
                 </a>
             </div>
 
-            <div class="card bottom">
+            <div class="card">
                 <a href="./projects/waitingforchineke">
-                    <img class="card-image" src="images/waiting for chineke/Mobile /1.webp" alt="projects-image">
+                    <img class="card-image"
+                        src="./assets/projects/waiting for chineke/Mobile /1.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/waitingforchineke">
                     <p class="project-title">waiting for chineke.</p>
                 </a>
             </div>
 
-            <div class="card bottom">
+            <div class="card">
                 <a href="./projects/pain-a-discomfort-or-a-trigger">
-                    <img class="card-image" src="images/pain a discomfort/mobille350px.webp" alt="projects-image">
+                    <img class="card-image"
+                        src="./assets/projects/pain a discomfort/mobille350px.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/pain-a-discomfort-or-a-trigger">
                     <p class="project-title">pain: a discomfort or a trigger.</p>
                 </a>
             </div>
-
-
-            <!-- 
-                <div class="card">
-                    <a href="link for image to go to">
-                        <img class="card-image" width="300px" src="images/blob-scene-haikei.png" alt="projects-image">
-                    </a>
-                    <a class="card-description" href="">
-                        <p>Lorem ipsum dolor sit.</p>
-                    </a>
-                </div>
-                
-                <div class="card">
-                    <img class="card-image" width="300px" src="images/blob-scene-haikei.png" alt="projects-image">
-                    <a class="card-description" href="">
-                        <p>Lorem ipsum dolor sit.</p>
-                    </a>
-                </div>
-
-        -->
 
 
         </div>
@@ -261,24 +254,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
-
-
-
-
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: ".blockquote-div",
-                //   markers: true,
-
-            }
-        });
-        tl.from(".logo-image", { y: -200, opacity: 0.5, duration: 1.5 })
-            .from(".nav-list", { y: -200, opacity: 0.5, duration: 1.5 })
-            .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
-            .from(".blockquote-div", { y: 200, opacity: 0, duration: 1.5 })
-            .from(".footer-container", { y: 10, opacity: 0, duration: 1.5 })
-    </script>
 
 
     <script src="script.js" async defer></script>
