--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
         <div class="contact-container">
 
             <div class="contact-image-container">
-                <img class="contact-image" src="images/contact-photo.webp" alt="contact photo">
+                <img class="contact-image" src="assets/contact-photo.webp   " alt="contact photo">
             </div>
 
             <div class="contact-words-container">
