--- a/exhibition.html
+++ b/exhibition.html
@@ -117,7 +117,7 @@
 
     <div class="exhibitions-info">
 
-        <div class="fromleft one">
+        <div class="">
 
             <p class="exhibition-year">2022</p>
 
@@ -191,7 +191,7 @@
 
         </div>
 
-        <div class="fromleft one">
+        <div class="">
 
             <p class="exhibition-year">2021</p>
 
@@ -251,7 +251,7 @@
 
         </div>
 
-        <div class="fromright">
+        <div class="">
 
             <p class="exhibition-year">2020</p>
 
@@ -275,10 +275,11 @@
                     href="https://thepeaceexhibit.com/exhibitor/neec-nonso-pain-a-discomfort-or-a-trigger/">
                     thepeaceexhibit.com
                 </a>
+            </section>
 
         </div>
 
-        <div class="fromright">
+        <div class="">
 
             <p class="exhibition-year">2019</p>
 
