--- a/exhibitions/nigeria-trending-lagos-fringe.html
+++ b/exhibitions/nigeria-trending-lagos-fringe.html
@@ -49,7 +49,7 @@
 <body>
     <!-- Back to top button -->
     <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="../assets/chevron-up-circle-outline.svg" alt="back to top icon">
+        src="../assets/icons/chevron-up-circle-outline.svg" alt="back to top icon">
 
     <!--- Start of Navbar -->
 
@@ -117,7 +117,7 @@
 
         <section class="jumbotron">
 
-            <p class="exhibition-title"> <a href="./nigeria trending lagos fringe by neec nonso">
+            <p class="exhibition-title"> <a href="nigeria-trending-lagos-fringe">
                     nigeria trending, <br> lagos fringe</a>
             </p>
             <p class="exhibition-venue">freedom park, <br> kongi`s harvest gallery,</p>
