--- a/exhibitions/youngphotographers.html
+++ b/exhibitions/youngphotographers.html
@@ -46,7 +46,7 @@
 <body>
     <!-- Back to top button -->
     <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="../assets/chevron-up-circle-outline.svg" alt="back to top icon">
+        src="../assets/icons/chevron-up-circle-outline.svg" alt="back to top icon">
 
     <!--- Start of Navbar -->
 
@@ -123,22 +123,22 @@
         </section>
 
         <section class="">
-            <img src="../exhibition/young photographers/1.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/1.webp" alt=" young photographers">
         </section>
 
         <section class="potrait-images-exhibition">
 
-            <img src="../exhibition/young photographers/2.webp" alt=" young photographers">
-            <img src="../exhibition/young photographers/3.webp" alt=" young photographers">
-            <img src="../exhibition/young photographers/4.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/2.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/3.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/4.webp" alt=" young photographers">
 
         </section>
 
         <section class="second-class-potrait">
-            <img src="../exhibition/young photographers/5.webp" alt=" young photographers">
-            <img src="../exhibition/young photographers/6.webp" alt=" young photographers">
-            <img src="../exhibition/young photographers/7.webp" alt=" young photographers">
-            <img src="../exhibition/young photographers/8.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/5.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/6.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/7.webp" alt=" young photographers">
+            <img src="../assets/exhibitions/young photographers/8.webp" alt=" young photographers">
         </section>
 
     </div>
