--- a/exhibitions/youngcontemporaries.html
+++ b/exhibitions/youngcontemporaries.html
@@ -138,47 +138,47 @@
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/2.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/2.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/2.webp" alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/3.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/3.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/3.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/4.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/4.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/4.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/5.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/5.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/5.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/6.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/6.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/6.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/7.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/7.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/7.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/8.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/8.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/8.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/9.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/9.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/9.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
             <picture>
                 <source media="(min-width: 500px)" srcset="../assets/exhibitions/young-comtemporaries/10.webp">
-                <img src="../assets/exhibitions/young-comtemporaries/mobile/10.webp">
+                <img src="../assets/exhibitions/young-comtemporaries/mobile/10.webp"  alt="young contemporaries exhibition by neec nonso">
             </picture>
 
 
