--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
 </head>
 
 <body onload="randombg()">
+    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
+        src="../assets/icons/chevron-up-circle-outline.svg" alt="back to top icon">
 
     <div id="random" class="main">
 
-        <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-            src="./assets/chevron-up-circle-outline.svg" alt="back to top icon">
+ 
 
 
         <a class="home-btn" href="./bio">learn more</a>
