--- a/projects/howtophotographylagos.html
+++ b/projects/howtophotographylagos.html
@@ -189,13 +189,8 @@
                                 src="../assets/projects/howtophotographylagos/1200px Jpeg/neec.nonso - 14.webp"
                                 alt="howtophotographylagos" loading=""></li>
                         <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src=../assets/projects/howtophotographylagos/1200px Jpeg/neec.nonso - 16.webp"
+                                src="../assets/projects/howtophotographylagos/1200px Jpeg/neec.nonso - 16.webp"
                                 alt="howtophotographylagos" loading=""></li>
-
-
-
-
-
 
                     </ul>
 
