--- a/augmented-reality.html
+++ b/augmented-reality.html
@@ -47,7 +47,7 @@
 <body>
     <!-- Back to top button -->
     <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="../assets/icons/chevron-up-circle-outline.svg" alt="back to top icon">
+        src="./assets/icons/chevron-up-circle-outline.svg" alt="back to top icon">
 
     <!--- Start of Navbar -->
 
