--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
 
         <nav class='navbar'>
             <a class="logo-link" href='/'>
-                <img src="./assets/icons/neec-nonso-logo.png" class='logo-image' alt='logo' />
+                <img loading="lazy" src="./assets/icons/neec-nonso-logo.png" class='logo-image' alt='logo' />
             </a>
 
             <ul class='nav-list'>
@@ -131,7 +131,7 @@
 
             <div class="card">
                 <a href="./projects/theboysfraternity">
-                    <img class="card-image" src="./assets/projects/the boys fraternity/Mobile/project.webp"
+                    <img loading="lazy" class="card-image" src="./assets/projects/the boys fraternity/Mobile/project.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theboysfraternity">
@@ -141,7 +141,7 @@
 
             <div class="card">
                 <a href="./projects/thelastburial">
-                    <img class="card-image" src="./assets/projects/the last burial/Mobile/1.webp"
+                    <img loading="lazy" class="card-image" src="./assets/projects/the last burial/Mobile/1.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/thelastburial">
@@ -151,7 +151,7 @@
 
             <div class="card">
                 <a href="./projects/whatwasdeadwasneverdead">
-                    <img class="card-image"
+                    <img loading="lazy" class="card-image"
                         src="./assets/projects/what was dead was never dead/Mobile/1.webp"
                         alt="projects-image">
                 </a>
@@ -162,7 +162,7 @@
 
             <div class="card">
                 <a href="./projects/christmasandclothes">
-                    <img class="card-image" src="../assets/projects/christmas-and-clothes/1.webp" alt="projects-image">
+                    <img loading="lazy" class="card-image" src="../assets/projects/christmas-and-clothes/1.webp" alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/christmasandclothes">
                     <p class="project-title">christmas and clothes.</p>
@@ -171,7 +171,7 @@
 
             <div class="card">
                 <a href="./projects/howtophotographylagos">
-                    <img class="card-image"
+                    <img loading="lazy" class="card-image"
                         src="./assets/projects/howtophotographylagos/350px Mobile/neec.nonso - 4.webp"
                         alt="projects-image">
                 </a>
@@ -182,7 +182,7 @@
 
             <div class="card">
                 <a href="./projects/howtophotographylagostwo">
-                    <img class="card-image"
+                    <img  loading="lazy" class="card-image"
                         src="../assets/projects/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
                         alt="projects-image">
                 </a>
@@ -193,7 +193,7 @@
 
             <div class="card">
                 <a href="./projects/theanotherbeginning">
-                    <img class="card-image"
+                    <img loading="lazy" class="card-image"
                         src="./assets/projects/the another beginning/350px Jpeg/1.webp"
                         alt="projects-image">
                 </a>
@@ -204,7 +204,7 @@
 
             <div class="card">
                 <a href="./projects/toiletintoiletout">
-                    <img class="card-image"
+                    <img loading="lazy" class="card-image"
                         src="./assets/projects/toilet in, toilet out/Mobile/2.webp"
                         alt="projects-image">
                 </a>
@@ -215,7 +215,7 @@
 
             <div class="card">
                 <a href="./projects/waitingforchineke">
-                    <img class="card-image"
+                    <img loading="lazy" class="card-image"
                         src="./assets/projects/waiting for chineke/Mobile /1.webp"
                         alt="projects-image">
                 </a>
@@ -226,7 +226,7 @@
 
             <div class="card">
                 <a href="./projects/pain-a-discomfort-or-a-trigger">
-                    <img class="card-image"
+                    <img loading="lazy" class="card-image"
                         src="./assets/projects/pain a discomfort/mobille350px.webp"
                         alt="projects-image">
                 </a>
